# MathCV

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  MathCVTests.cpp  MathCVTests.cxx  MathCV_global.h  README.md  mathcv.cpp  mathcv.h  test.cpp  test_mathcv
cuda/: cuda_utils.cuh  matrix_cuda.cu  matrix_cuda.cuh  matrix_cuda.h  matrix_operations.cu  matrix_operations.cuh
src/LinearAlgebra/: math_enums.h  matrix.cpp  matrix.h  vector2d.cpp  vector2d.h  vectornd.h
